--- a/client/index.html
+++ b/client/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script defer data-domain="allmende.xyz" src="https://plausible.io/js/plausible.js"></script>
   </body>
 </html>
