--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
     <script type="module" src="/src/main.ts"></script>
     <script
       defer
-      data-domain="allmende.xyz"
+      data-domain="allmendeapp.xyz"
       src="https://plausible.io/js/plausible.js"
     ></script>
   </body>
